--- a/templates/signup.html
+++ b/templates/signup.html
@@ -1,29 +1,40 @@
 {% extends 'base.html' %}
 {% block content %}
-    <h2 class="text-center">Авторизация</h2>
+    <h2 class="text-center">Регистрация</h2><br>
     <form action="" method="post">
         {{ form.hidden_tag() }}
-        <p>{{ form.login.label }}{{ form.login(type="string") }}</p><br>
+        <div class="d-flex justify-content-center input-group">
+            <span class="input-group-text">Логин</span>
+            {{ form.login(type="string", class="form-control") }}
+        </div>
         {% for error in form.login.errors %}
             <div class="alert alert-danger" role="alert">
                 {{ error }}
             </div>
-        {% endfor %}
-        <p>{{ form.password.label }}{{ form.password(type="password") }}</p><br>
+        {% endfor %}<br>
+        <div class="d-flex justify-content-center input-group">
+            <span class="input-group-text">Пароль</span>
+            {{ form.password(type="password", class="form-control") }}
+        </div>
         {% for error in form.password.errors %}
             <div class="alert alert-danger" role="alert">
                 {{ error }}
             </div>
-        {% endfor %}
-        <p>{{ form.repeat.label }}{{ form.repeat(type='password') }}</p><br>
+        {% endfor %}<br>
+        <div class="d-flex justify-content-center input-group">
+            <span class="input-group-text">Повторите пароль</span>
+            {{ form.repeat(type="password", class="form-control") }}
+        </div>
         {% for error in form.repeat.errors %}
             <div class="alert alert-danger" role="alert">
                 {{ error }}
             </div>
-        {% endfor %}
+        {% endfor %}<br>
         {% if message %}
             <div class="alert alert-danger">{{ message }}</div>
-        {% endif %}
-        {{ form.submit(type="submit", class="btn btn-dark") }}
+        {% endif %}<br>
+        <div class="d-flex justify-content-center">
+            {{ form.submit(type="submit", class="btn btn-dark text-center") }}
+        </div>
     </form>
 {% endblock %}
