--- a/templates/base.html
+++ b/templates/base.html
@@ -33,7 +33,7 @@
                                 <a class="nav-link" aria-current="page">Создать новый маршрут</a>
                             </li>
                             <li class="nav-item active">
-                                <a class="nav-link" aria-current="page">Профиль</a>
+                                <a class="nav-link" aria-current="page" href="/profile">Профиль</a>
                             </li>
                             <li class="nav-item active">
                                 <a class="nav-link" aria-current="page" href="/confirm_logout">Выйти</a>
