--- a/templates/confirm_logout.html
+++ b/templates/confirm_logout.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% block content %}
-<h2 class="text-center">Вы действительно хотите выйти?</h2>
+<h2 class="text-center">Вы действительно хотите выйти?</h2><br>
 <div class="row d-flex align-items-center">
     <a class="col btn btn-dark" href="/logout">Выйти</a>
     <a class="col btn btn-light" href="/">Вернуться на главную</a>
