--- a/templates/index.html
+++ b/templates/index.html
@@ -9,8 +9,8 @@
         {% else %}
         <h5 class="lead mt-4">Делись путешествиями с друзьями</h5>
         <p class="lead mt-4">
-            <a href="/signup" class="btn btn-lg btn-secondary fw-bold border-white bg-dark">Зарегистрироваться</a>
-            <a href="/login" class="btn btn-lg btn-secondary fw-bold border-white bg-dark">Войти</a>
+            <a href="/signup" class="btn btn-lg btn-dark fw-bold">Зарегистрироваться</a>
+            <a href="/login" class="btn btn-lg btn-dark fw-bold">Войти</a>
         </p>
         {% endif %}
     </div>
