Подключение css-файла. Вывод карты на странице "Карта". Реализация вывода по id, но будет реализовано в будущем.

--- a/templates/confirm_logout.html
+++ b/templates/confirm_logout.html
@@ -1,8 +1,10 @@
 {% extends 'base.html' %}
 {% block content %}
-<h2 class="text-center">Вы действительно хотите выйти?</h2><br>
-<div class="row d-flex align-items-center">
-    <a class="col btn btn-dark" href="/logout">Выйти</a>
-    <a class="col btn btn-light" href="/">Вернуться на главную</a>
+<div class="container mt-4 mb-4">
+    <h2 class="text-center">Вы действительно хотите выйти?</h2><br>
+    <div class="row d-flex align-items-center">
+        <a class="col btn btn-dark" href="/logout">Выйти</a>
+        <a class="col btn btn-light" href="/">Вернуться на главную</a>
+    </div>
 </div>
 {% endblock %}
