--- a/templates/base.html
+++ b/templates/base.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>{{ title }}</title>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css">
+        <link rel="stylesheet" href="../static/css/style.css">
     </head>
 
     <body class="d-flex flex-column h-100">
@@ -27,7 +28,7 @@
                         <ul class="navbar-nav mb-2 mb-md-0 ml-auto justify-content-center">
                         {% if current_user.is_authenticated %}
                             <li class="nav-item active">
-                                <a class="nav-link" aria-current="page">Карта</a>
+                                <a class="nav-link" aria-current="page" href="/show_map/0">Карта</a>
                             </li>
                             <li class="nav-item active">
                                 <a class="nav-link" aria-current="page">Создать новый маршрут</a>
@@ -52,9 +53,7 @@
             </nav>
         </header>
         <main class="flex-shrink-0">
-            <div class="container mt-4 mb-4">
-                {% block content %}{% endblock %}
-            </div>
+            {% block content %}{% endblock %}
         </main>
         <footer class="footer mt-auto py-3 bg-light">
             <div class="container">
