--- a/templates/login.html
+++ b/templates/login.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %}
 {% block content %}
+<div class="container mt-4 mb-4">
     <h2 class="text-center">Авторизация</h2><br>
     <form action="" method="post">
         {{ form.hidden_tag() }}
@@ -29,4 +30,5 @@
             {{ form.submit(type="submit", class="btn btn-dark") }}
         </div>
     </form>
+</div>
 {% endblock %}
