--- a/templates/signup.html
+++ b/templates/signup.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %}
 {% block content %}
+<div class="container mt-4 mb-4">
     <h2 class="text-center">Регистрация</h2><br>
     <form action="" method="post">
         {{ form.hidden_tag() }}
@@ -37,4 +38,5 @@
             {{ form.submit(type="submit", class="btn btn-dark text-center") }}
         </div>
     </form>
+</div>
 {% endblock %}
