--- a/templates/base.html
+++ b/templates/base.html
@@ -34,6 +34,9 @@
                                 <a class="nav-link" aria-current="page">Создать новый маршрут</a>
                             </li>
                             <li class="nav-item active">
+                                <a class="nav-link" aria-current="page" href="/all_routes">Все маршруты</a>
+                            </li>
+                            <li class="nav-item active">
                                 <a class="nav-link" aria-current="page" href="/profile">Профиль</a>
                             </li>
                             <li class="nav-item active">
