--- a/templates/base.html
+++ b/templates/base.html
@@ -28,7 +28,7 @@
                         <ul class="navbar-nav mb-2 mb-md-0 ml-auto justify-content-center">
                         {% if current_user.is_authenticated %}
                             <li class="nav-item active">
-                                <a class="nav-link" aria-current="page" href="/show_map/0">Карта</a>
+                                <a class="nav-link" aria-current="page" href="/show_main">Карта</a>
                             </li>
                             <li class="nav-item active">
                                 <a class="nav-link" aria-current="page">Создать новый маршрут</a>
