--- a/templates/base.html
+++ b/templates/base.html
@@ -31,7 +31,7 @@
                                 <a class="nav-link" aria-current="page" href="/show_main">Карта</a>
                             </li>
                             <li class="nav-item active">
-                                <a class="nav-link" aria-current="page">Создать новый маршрут</a>
+                                <a class="nav-link" aria-current="page" href="/add_new_route">Создать новый маршрут</a>
                             </li>
                             <li class="nav-item active">
                                 <a class="nav-link" aria-current="page" href="/all_routes">Все маршруты</a>
