--- a/templates/login.html
+++ b/templates/login.html
@@ -5,8 +5,7 @@
     <form action="" method="post">
         {{ form.hidden_tag() }}
         <div class="d-flex justify-content-center input-group">
-            <span class="input-group-text">Логин</span>
-            {{ form.login(type="string", class="form-control") }}
+            {{ form.login(type="string", class="form-control", placeholder="Логин") }}
         </div>
         {% for error in form.login.errors %}
         <div class="alert alert-danger" role="alert">
@@ -14,8 +13,7 @@
         </div>
         {% endfor %}<br>
         <div class="d-flex justify-content-center input-group">
-            <span class="input-group-text">Пароль</span>
-            {{ form.password(type="password", class='form-control') }}
+            {{ form.password(type="password", class='form-control', placeholder="Пароль") }}
         </div>
         {% for error in form.password.errors %}
         <div class="alert alert-danger" role="alert">
