Реализована отображение карты на странице с маршрутом

--- a/templates/route_map.html
+++ b/templates/route_map.html
@@ -9,6 +9,6 @@
     <div id="map" style="position: absolute; width: 100%; height: 100%"></div>
 
     <!-- Создаём карту -->
-    <script type="text/javascript" src="../../static/js/show_map.js"></script>
+    <script type="text/javascript" src="../../static/js/map_{{id}}.js"></script>
 </div>
 {% endblock %}
