--- a/templates/add_new_route.html
+++ b/templates/add_new_route.html
@@ -44,7 +44,7 @@
         <div class="d-flex justify-content-center input-group">
             <span class="input-group-text">Координаты</span>
             {{ form.coordinates(type="string", class="form-control",
-                                placeholder="Пишите координаты в формате 'широта, долгота', каждая с новой строки...") }}
+                                placeholder="Пишите координаты в формате 'широта, долгота', каждая координата с новой строки...") }}
         </div>
 
         {% for error in form.coordinates.errors %}
