создал первый маршрут

--- a/templates/add_new_route.html
+++ b/templates/add_new_route.html
@@ -15,7 +15,8 @@
         {% endfor %}<br>
         <div class="d-flex justify-content-center input-group">
             <span class="input-group-text">Время</span>
-            {{ form.time_hours(type="string", class="form-control") }}
+            {{ form.time_hours(type="string", class="form-control",
+                               placeholder="Указывайте в часах...") }}
         </div>
         {% for error in form.time_hours.errors %}
         <div class="alert alert-danger" role="alert">
